--- a/src/assets/locales/ja.json
+++ b/src/assets/locales/ja.json
@@ -127,15 +127,15 @@
     "watching": "見る中"
   },
   "menu": {
-    "completed": "終了",
-    "dropped": "中止",
+    "completed": "終了 ({0})",
+    "dropped": "中止 ({0})",
     "home": "ホーム",
-    "paused": "一時的中止",
-    "planning": "予定",
-    "repeating": "再見",
+    "paused": "一時的中止 ({0})",
+    "planning": "予定 ({0})",
+    "repeating": "再見 ({0})",
     "seasonPreview": "シーズン予告",
     "settings": "環境設定",
-    "watching": "見る中"
+    "watching": "見る中 ({0})"
   },
   "$vuetify": {
     "noDataText": "データ無し"
