Add Season Preview

--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -1,6 +1,13 @@
 {
   "originalReading": "Deutsch",
   "englishReading": "German",
+  "seasons": {
+    "spring": "Frühling",
+    "summer": "Sommer",
+    "fall": "Herbst",
+    "autumn": "Herbst",
+    "winter": "Winter"
+  },
   "system": {
     "actions": {
       "add": "Hinzufügen",
