--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -33,7 +33,7 @@
       "unknown": "Unbekannt"
     },
     "aniList": {
-      "activities": "Aktivitäten",
+      "activities": "Neuste Aktivitäten",
       "airingFinished": "Ausstrahlung beendet",
       "currentProgress": "{0} / {1}",
       "howToAuthenticate": {
@@ -64,6 +64,14 @@
         "title": "Synchronisation fehlgeschlagen",
         "text": "Die geplante Änderung konnte nicht synchronisiert werden! Bitte überprüfe deine Internetverbindung und die Erreichbarkeit von AniList."
       }
+    },
+    "homepage": {
+      "completed": "{0} fertig geguckt",
+      "plansToWatch": "{0} zur Plan-Liste hinzugefügt",
+      "watchedEpisode": "Folge {1} von {0} geguckt",
+      "dropped": "{0} abgebrochen",
+      "rewatchedEpisode": "Folge {1} von {0} wiederholt",
+      "paused": "{0} pausiert"
     },
     "modules": {
       "aniList": "AniList"
