Add Logout button
Update package dependencies

After logging out,it will navigate you to Home.

Resolves #85

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -8,6 +8,7 @@
     "fastSearch": "Search... \u23ce",
     "loading": "Loading...",
     "login": "Login",
+    "logout": "Logout",
     "remove": "Remove",
     "reset": "Reset",
     "save": "Save",
