--- a/src/assets/locales/ja.json
+++ b/src/assets/locales/ja.json
@@ -8,6 +8,7 @@
     "fastSearch": "検索する・・・ \u23ce",
     "loading": "通信中・・・",
     "login": "ログイン",
+    "logout": "ログアウト",
     "remove": "削除",
     "reset": "リセット",
     "save": "保存",
