--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -8,6 +8,7 @@
     "fastSearch": "Suchen... \u23ce",
     "loading": "Lädt...",
     "login": "Login",
+    "logout": "Logout",
     "remove": "Entfernen",
     "reset": "Zurücksetzen",
     "save": "Speichern",
