Special thanks french correction

--- a/src/assets/locales/fr.json
+++ b/src/assets/locales/fr.json
@@ -164,7 +164,7 @@
         "version": "Version",
         "changesIn": "Dernier changements dans {0}"
       },
-      "specialThanks": "Remerciement spécial",
+      "specialThanks": "Remerciements",
       "supporters": "Supporters"
     }
   },
