--- a/src/assets/locales/ms.json
+++ b/src/assets/locales/ms.json
@@ -1,83 +1,83 @@
 {
-  "originalReading": "العربية",
-  "englishReading": "Arabic",
+  "originalReading": "Bahasa Melayu",
+  "englishReading": "Malay",
   "actions": {
-    "add": "اضف",
-    "addToPlanToWatch": "Add to plan to watch",
-    "back": "Back",
-    "fastSearch": "بحث... \u23ce",
-    "loading": "جار التحميل...",
-    "login": "Login",
-    "logout": "Logout",
-    "remove": "إزالة",
-    "reset": "أعاد التشغيل",
-    "save": "احفظ",
-    "search": "بحث",
-    "sort": "فرز وصفى",
-    "toPageTop": "Jump to top"
+    "add": "Tambah",
+    "addToPlanToWatch": "Tambahkan ke daftar Direncanakan",
+    "back": "Kembali",
+    "fastSearch": "Mencari... \u23ce",
+    "loading": "Memuat...",
+    "login": "Masuk",
+    "logout": "Keluar",
+    "remove": "Hapus",
+    "reset": "Reset",
+    "save": "Simpan",
+    "search": "Cari",
+    "sort": "Urutkan & Saring",
+    "toPageTop": "Lompat ke atas"
   },
   "alerts": {
-    "adultContent": "This media is considered adult content! Viewer Discretion Advised.",
-    "noDescription": "No description available.",
-    "noEnglishTitle": "No English title available.",
-    "noInformation": "No information available.",
-    "noSynonyms": "No synonyms available.",
-    "notYetInList": "This media is not yet in your list.",
-    "unauthenticated": "You are not authenticated!",
-    "unknown": "غير معروف"
+    "adultContent": "Media ini dianggap konten dewasa! Kebijakan Pemirsa Disarankan.",
+    "noDescription": "Tidak ada deskripsi yang tersedia.",
+    "noEnglishTitle": "Tidak ada judul Inggris yang tersedia.",
+    "noInformation": "Tidak ada informasi yang tersedia.",
+    "noSynonyms": "Tidak ada sinonim yang tersedia.",
+    "notYetInList": "Media ini belum terdaftar di list kamu.",
+    "unauthenticated": "Kamu tidak ter-otentikasi!",
+    "unknown": "Tidak Diketahui"
   },
   "errors": {
     "updateFailed": {
-      "title": "Update failed",
+      "title": "Pembaharuan gagal",
       "text": "The committed update could not be synchronized! Check AniList availability or the internet connection!"
     }
   },
   "menus": {
     "aniList": {
-      "completed": "منتهى",
-      "dropped": "إسقاط",
-      "home": "Home",
-      "paused": "توقف",
-      "planning": "خطة المشاهدة",
-      "repeating": "تكرار",
-      "seasonPreview": "Season Preview",
-      "watching": "مشاهدة"
+      "completed": "Selesai",
+      "dropped": "Dihentikan",
+      "home": "Beranda",
+      "paused": "Ditahan",
+      "planning": "Direncanakan",
+      "repeating": "Mengulang",
+      "seasonPreview": "Pratinjau Musim",
+      "watching": "Sedang Menonton"
     },
     "search": "Detailed Search",
     "settings": {
-      "title": "إعدادات",
-      "about": "عن ZeroTwo",
+      "title": "Pengaturan",
+      "about": "Tentang ZeroTwo",
       "aniList": "AniList",
-      "appSettings": "إعدادات التطبيقات",
-      "changelog": "أحدث التغييرات",
-      "specialThanks": "Special Thanks"
+      "appSettings": "Pengaturan Aplikasi",
+      "changelog": "Perubahan Terakhir",
+      "specialThanks": "Kontributor"
     }
   },
   "components": {
     "sorting": {
       "directions": {
-        "ascending": "إرتفاع",
-        "descending": "إنحدار"
+        "ascending": "Naik",
+        "descending": "Turun"
       },
-      "sortingLabel": "فرز حسب",
-      "title": "الاسم",
-      "score": "النتيجة",
-      "progress": "التقدم",
-      "startingDate": "Starting date",
-      "episodeAmount": "Episode amount"
+      "sortingLabel": "Urutkan berdasarkan",
+      "title": "Judul",
+      "score": "Skor",
+      "progress": "Kemajuan",
+      "startingDate": "Tanggal Mulai",
+      "episodeAmount": "Jumlah Episode"
     }
   },
   "pages": {
     "aniList": {
       "home": {
         "activities": {
-          "headline": "Latest Activities",
-          "completed": "Completed {0}",
-          "plansToWatch": "Plans to watch {0}",
-          "watchedEpisode": "Watched episode {1} of {0}",
-          "dropped": "Dropped {0}",
-          "rewatchedEpisode": "Rewatched episode {1} of {0}",
-          "paused": "Paused {0}"
+          "headline": "Aktivitas Terbaru",
+          "completed": "Selesai {0}",
+          "plansToWatch": "Direncanakan {0}",
+          "watchedEpisode": "Episode {1} dari {0} selesai",
+          "dropped": "Dihentikan {0}",
+          "rewatchedEpisode": "Episode {1} dari {0} ditonton kembali",
+          "paused": "Ditahan {0}"
         },
         "howToAuthenticate": {
           "header": "How to login:",
@@ -89,15 +89,15 @@
         }
       },
       "list": {
-        "airingFinished": "Airing finished",
-        "missingEpisodes": "One episode to watch | {count} episodes to watch",
-        "notYetAired": "Not yet aired",
-        "nextAiringEpisode": "Episode {0} is airing {1}"
+        "airingFinished": "Selesai ditayangkan",
+        "missingEpisodes": "Satu episode untuk dinonton | {count} episode untuk dinonton",
+        "notYetAired": "Belum ditayangkan",
+        "nextAiringEpisode": "Episode {0} akan ditayangkan {1}"
       },
       "detailView": {
-        "airedOn": "Aired on {0}",
-        "airedOnTo": "{0} until {1}",
-        "airesFromTo": "Aires from {0} to {1}",
+        "airedOn": "Ditayangkan pada {0}",
+        "airedOnTo": "{0} hingga {1}",
+        "airesFromTo": "Ditayangkan pada {0} hingga {1}",
         "airesOn": "Aires on {0}",
         "airingStartedOn": "Started on {0}",
         "airingStartsOnDay": "Starts on {0}",
@@ -134,7 +134,7 @@
         "hint": "Keep clear to also search for media that is not yet in your list"
       },
       "genres": {
-        "label": "Genres",
+        "label": "Genre",
         "hint": "Max. 3",
         "noMatch": "No genre matching \"<strong>{0}</strong>\". Press <kbd>enter</kbd> to create it."
       }
@@ -177,7 +177,7 @@
   },
   "notifications": {
     "aniList": {
-      "title": "Synchronization successful",
+      "title": "Sinkronisasi sukses",
       "completeUpdateText": "{0} was successfully completed with the synchronization to episode {1}.",
       "simpleUpdateText": "{0} was successfully synchronized to episode {1}.",
       "addedToList": "{0} was successfully added to your list.",
@@ -187,11 +187,11 @@
   "misc": {
     "aniList": {
       "listStatusses": {
-        "completed": "Completed",
-        "dropped": "Dropped",
-        "paused": "Paused",
-        "planning": "Planning",
-        "repeating": "Repeating",
+        "completed": "Selesai",
+        "dropped": "Dihentikan",
+        "paused": "Ditahan",
+        "planning": "Direncanakan",
+        "repeating": "Mengulang",
         "watching": "Watching"
       },
       "seasons": {
@@ -206,7 +206,7 @@
       "full": "MMMM Do YYYY",
       "monthAndYear": "MMMM YYYY",
       "yearOnly": "YYYY",
-      "dateUnknown": "Date unknown"
+      "dateUnknown": "Tanggal tidak diketahui"
     },
     "rules": {
       "required": "This input must be filled."
@@ -216,6 +216,6 @@
     }
   },
   "$vuetify": {
-    "noDataText": "No data"
+    "noDataText": "Tidak ada data"
   }
 }
